
      e) To require non-zero exit status with specified error stream
         contents:

           expect (...).to_fail_with "exact content"
           expect (...).to_fail_while_containing "substring"
           expect (...).to_fail_while_matching "pattern"

  - New experimental `specl.inprocess` module provides a way to run
    carefully written Lua programs inside the Specl process, saving a
    fork/exec each time.

** Incompatible changes:

  - Invoking `specl` with no filename arguments no longer reads specs
    from standard input.  You must explicitly pass a "-" argument to get
    that behaviour.

  - RSpec has been moving from expressing `should_` expectations to
    using `to_` for technical reasons.  Specl now uses `to_` throughout,
    not for technical reasons, but because:

      (i) expectations almost always read better with `to_` instead of
          `should_`;
     (ii) it's shorter and easier to type, so is less "noisy" in among
          the important surrounding arguments.

    There are no plans to remove `should_` from Specl, so you can expect
    to safely continue to use your existing spec files indefinitely: But
    all mention of `should_` has been removed from documentation, and I
    recommend you use `to_` for new spec files for the reasons above.

  - When making custom matchers, all the api constructor functions are
    now proper methods.  Previous releases forgot the initial self
    parameter in the unnamed matching predicate function and the
    following optional functions accepted by the constructor:

      function (self, actual, expect)
      function format_actual (self, actual, ...)
      format_expect (self, expect, ...)
      format_alternatives (self, adaptor, alternatives, ...)

    If you have added any custom matchers to your spec files, be sure
    to insert the `self` parameter to match the new calling convention
    as soon as you upgrade, or they will not work with this release.

** Bug fixes:
