@@ -1,13 +1,8 @@
-local hell = require "specl.shell"
-
-local SPECL = os.getenv ("SPECL") or "bin/specl"
+local inprocess = require "specl.inprocess"
+local Main      = require "specl.main"
 
 function run_spec (argt)
-  -- $SPECL <argt> --color=no -
-  local t = {SPECL, "--color=no", "-", stdin = argt.stdin}
-
-  -- inject passed argt elements just before the last element ("-").
+  local t = {"--color=no", "-"}
   for _, e in ipairs (argt) do table.insert (t, #t,  e) end
-
-  return hell.spawn (t)
+  return inprocess.call (Main, t, argt.stdin)
 end
